--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,11 @@ header{
     display: flex;
     align-items: center;
     z-index: 2;
+    transition: all .3s ease;
 }
 .nav_wrapper.scroll{
     top: 0;
-    background: rgba(255, 255, 255, .75);
+    background: rgba(255, 255, 255, 1);
 }
 .logo{
     position: relative;
@@ -75,13 +76,8 @@ header{
     position: fixed;
     top: 23px;
     right: 16px;
-    width: 0;
-    transition: all .5 ease;
-    display: none;
-}
-.menu_mini_wrap.selected{
     width: 100px;
-    background-color: rgba(255, 255, 255, .7);
+    transition: all .5 ease;
 }
 .menu_mini_icon{
     position: relative;
@@ -91,12 +87,13 @@ header{
     background: url(../images/plus.png) no-repeat center;
     background-size: contain;
     margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, .7);
     border-radius: 50%;
     cursor: pointer;
     transition: all .3s ease;
+    z-index: 1;
 }
 .menu_mini_icon:hover{
+    background-color: rgba(255, 255, 255, .7);
     opacity: .5;
 }
 .menu_mini_icon.show{
@@ -108,13 +105,23 @@ header{
     text-align: right;
     font-family: 'Heebo', sans-serif;
     font-weight: 400;
-    display: none;
+    top: -53px;
+    padding-top: 50px;
+    transition: all .5s ease;
+    height: 0;
 }
 .menu_mini.show{
-    display: block;
+    height: 110px;
+    background-color: rgba(255, 255, 255, 1);
 }
 .menu_mini li{
     margin-bottom: 10px;
+    transition: all .1s ease;
+    opacity: 0;
+}
+.menu_mini li.open{
+    transition: all 1s ease;
+    opacity: 1;
 }
 .menu_mini li a{
     color: black;
