--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ header{
     left: 50%;
     transform: translateX(-50%);
     top: 30px;
-    width: 960px;
+    width: 100%;
     display: flex;
     align-items: center;
     z-index: 2;
@@ -36,7 +36,8 @@ header{
 }
 .main_menu{
     position: absolute;
-    width: 100%;
+    width: 960px;
+    height: 100%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -48,8 +49,10 @@ header{
 .main_menu li{
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 10px;
 }
 .main_menu li:nth-child(3){
     padding: 0;
