--- a/css/media_screen.css
+++ b/css/media_screen.css
@@ -1,3 +1,12 @@
+@media screen and (max-width: 1200px){
+    .top_icon_wrapper{
+        width: 100%;
+        height: 35px;
+        bottom: 16px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
 @media screen and (max-width: 960px){
     .main_menu{
         width: 100%;
@@ -43,18 +52,27 @@
     }
     .group5_logo{
         left: 50%;
-        transform: translateX(-50%);
+        transform: translateX(-50%) scale(0.5);
         margin-bottom: 25px;
+    }
+    .group5_logo.scale{
+        transform: translateX(-50%) scale(1);
     }
     .group5_text_box_wrap2{
         position: relative;
         float: left;
         width: 100%;
     }
+    .group5_title.show:before{
+        width: 95px;
+    }
+    .group5_title.show:after{
+        width: 95px;
+    }
     .group5_text_box{
         width: 90%;
     }
-    .group5_img{
+    .group5_img_wrapper{
         width: 95%;
     }
 }
@@ -100,17 +118,14 @@
     }
     .gallery1_wrap div:nth-child(1){
         width: 48%;
-        height: 250px;
         margin-right: 0;
     }
     .gallery1_wrap div:nth-child(2){
         float: right;
         width: 48%;
-        height: 250px;
     }
     .gallery1_wrap div:nth-child(3){
         width: 100%;
-        height: 250px;
         margin-top: 16px;
     }
     .gallery2_wrap{
@@ -118,25 +133,21 @@
     }
     .gallery2_wrap div:nth-child(1){
         width: 100%;
-        height: 250px;
         margin-bottom: 16px;
     }
     .gallery2_wrap div:nth-child(2){
         width: 48%;
-        height: 250px;
         margin-right: 10px;
     }
     .gallery2_wrap div:nth-child(3){
         float: right;
         width: 48%;
-        height: 250px;
     }
     .group2_text_box{
         flex-direction: column;
     }
-    .group2_text_box:after{
-        width: 75%;
-        height: 2px;
+    .group2_text_box.show:before, .group2_text_box.show:after{
+        display: none;
     }
     .left_wrapper, .right_wrapper{
         width: 80%;
@@ -144,6 +155,26 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .left_wrapper:before{
+        content: '';
+        position: absolute;
+        width: calc(75%/2);
+        top: 50%;
+        left: 50%;
+        transform: translateY(-50%);
+        border-bottom: 2px solid white;
+        animation: group2_line_480px 1s linear;
+    }
+    .left_wrapper:after{
+        content: '';
+        position: absolute;
+        width: calc(75%/2);
+        top: 50%;
+        right: 50%;
+        transform: translateY(-50%);
+        border-bottom: 2px solid white;
+        animation: group2_line_480px 1s linear;
     }
     .left, .right{
         width: 100%;
@@ -161,15 +192,19 @@
         float: left;
         width: 100%;
         margin-top: 15px;
+        transform: translate(0, -100px);
     }
     .wedding_text_box{
         width: 90%;
+    }
+    .wedding_text_box_wrap.show{
+        transform: translate(0, 0);
     }
     .group5_logo{
         width: 300px;
         height: 300px;
     }
-    .group5_img{
+    .group5_img_wrapper{
         height: 300px;
     }
     .footer_wrap{
