--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,14 @@ header{
     z-index: 2;
     transition: all .3s ease;
 }
+.nav_wrapper.scroll:hover{
+    background: rgba(255, 255, 255, 1);
+}
 .nav_wrapper.scroll{
     top: 0;
+    background: rgba(255, 255, 255, .7);
+}
+.nav_wrapper.hover{
     background: rgba(255, 255, 255, 1);
 }
 .logo{
@@ -83,14 +89,6 @@ header{
 .main_menu li:nth-child(3):hover:before, .main_menu li:nth-child(3):hover:after{
     border-bottom: 0;
     animation: none;
-}
-@keyframes menu_select{
-    0%{
-        width: 0;
-    }
-    100%{
-        width: 15%;
-    }
 }
 .main_menu li a{
     text-decoration: none;
@@ -343,26 +341,6 @@ header{
     animation-delay: .3s;
     opacity: 1;
 }
-@keyframes group2_line{
-    0%{
-        height: 0;
-        opacity: 0;
-    }
-    100%{
-        height: calc(75%/2);
-        opacity: 1;
-    }
-}
-@keyframes group2_line_480px{
-    0%{
-        width: 0;
-        opacity: 0;
-    }
-    100%{
-        width: calc(75%/2);
-        opacity: 1;
-    }
-}
 .left_wrapper, .right_wrapper{
     width: 50%;
     height: 100%;
@@ -527,16 +505,6 @@ header{
     opacity: 1;
     transform: translateX(0);
 }
-@keyframes show_section{
-    0%{
-        opacity: 0;
-        width: 0;
-    }
-    100%{
-        opacity: 1;
-        width: 100%;
-    }
-}
 .group4_text_box{
     position: relative;
     width: 790px;
@@ -637,16 +605,6 @@ header{
     animation: group5_title_deco 1.3s linear;
     animation-delay: .7s;
 }
-@keyframes group5_title_deco{
-    0%{
-        opacity: 0;
-        width: 0;
-    }
-    100%{
-        opacity: 1;
-        width: 25%;
-    }
-}
 .group5_description{
     text-align: justify;
     font-family: 'Heebo', sans-serif;
@@ -722,6 +680,14 @@ footer{
     float: left;
     width: 100%;
     background-color: #14544a;
+    transform: translateY(100%);
+    opacity: 0;
+    transition: all 1s ease;
+    transition-delay: .3s;
+}
+footer.show{
+    opacity: 1;
+    transform: translateY(0);
 }
 footer:after{
     content: '';
@@ -751,24 +717,44 @@ footer:after{
     transform: translateX(-50%);
     margin-top: 170px;
     margin-bottom: 70px;
+    transition: all 1s ease;
+    transition-delay: 1s;
+    opacity: 0;
+}
+.footer_logo.show{
+    opacity: 1;
 }
 .footer_text{
     position: relative;
     clear: both;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, 30px);
     float: left;
     font-family: 'Crimson Text', serif;
     font-size: 1.25em;
     margin-bottom: 100px;
+    transition: all 1s ease;
+    transition-delay: 1.3s;
+    opacity: 0;
+}
+.footer_text.show{
+    opacity: 1;
+    transform: translate(-50%, 0);
 }
 .sign_up_box{
     position: relative;
     float: left;
     clear: both;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, 30px);
     margin-bottom: 80px;
+    transition: all .7s ease;
+    transition-delay: 1.5s;
+    opacity: 0;
+}
+.sign_up_box.show{
+    opacity: 1;
+    transform: translate(-50%, 0);
 }
 .sign_up_box input{
     width: 290px;
@@ -787,6 +773,12 @@ footer:after{
     color: white;
     font-family: 'Heebo', sans-serif;
     cursor: pointer;
+    transition: all .3s ease;
+}
+.sign_up_box button:hover{
+    font-weight: 500;
+    color: #14544a;
+    background-color: white;
 }
 .sign_up_box input:focus, .sign_up_box button:focus{
     outline: none;
@@ -804,4 +796,26 @@ footer:after{
 }
 .social li a img{
     width: 32px;
+}
+.social li{
+    transition: all .3s cubic-bezier(0.13, 0.84, 0.74, 1.34);
+    transition-delay: 1.7s;
+    transform: translateY(30px);
+    opacity: 0;
+}
+.social li:nth-child(2){
+    transition-delay: 1.9s;
+}
+.social li:nth-child(3){
+    transition-delay: 2.1s;
+}
+.social li:nth-child(4){
+    transition-delay: 2.3s;
+}
+.social li:nth-child(5){
+    transition-delay: 2.5s;
+}
+.social li.show{
+    opacity: 1;
+    transform: translateY(0);
 }
