visual image animation, indicator added

--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -46,3 +46,32 @@
         width: 25%;
     }
 }
+@keyframes indicator{
+    0%, 100%{
+        transform: translateY(-7px)
+    }
+    50%{
+        transform: translateY(7px);
+        opacity: .15;
+    }
+}
+@keyframes hide_indicator{
+    0%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(50px);
+    }
+}
+@keyframes move_progress{
+    0%{
+        opacity: 0;
+        width: 0;
+    }
+    100%{
+        opacity: 1;
+        width: 100%;
+    }
+}
