--- a/css/main.css
+++ b/css/main.css
@@ -171,19 +171,88 @@ header{
 .menu_mini li a:hover{
     opacity: .5;
 }
-.main_visual{
+.main_visual_wrapper{
     position: relative;
     top: 0;
     width: 100%;
     height: 775px;
+    z-index: -1;
+}
+.main_visual{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all 1.5s ease;
+}
+.main_visual.show{
+    opacity: 1;
+}
+.main_visual:nth-child(1){
     background: url(../images/top_img.jpg) no-repeat center;
     background-size: cover;
-    z-index: -1;
+}
+.main_visual:nth-child(2){
+    background: url(../images/top_img2.jpg) no-repeat center;
+    background-size: cover;
+}
+.main_visual:nth-child(3){
+    background: url(../images/top_img3.jpg) no-repeat center;
+    background-size: cover;
+}
+.progress_bar_wrapper{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 7px;
+    bottom: 0;
+    background: rgba(255, 255, 255, .35);
+}
+.progress_bar{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.progress_bar:nth-child(1):before, .progress_bar:nth-child(2):before, .progress_bar:nth-child(3):before{
+    content: '';
+    position: absolute;
+    width: 33%;
+    height: 100%;
+    border-radius: 3px;
 }
 .content{
     position: relative;
     float: left;
     width: 100%;
+}
+.indicator{
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    bottom: 25px;
+    left: 50%;
+    background: url(../images/indicator.png) no-repeat center;
+    background-size: contain;
+    transition: all .5s ease;
+    animation: indicator 1.5s infinite;
+}
+.indicator:before{
+    content: 'scroll down';
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 200%;
+    text-align: center;
+    font-family: 'Heebo', sans-serif;
+    font-size: 0.9em;
+}
+.indicator.hide{
+    opacity: 0;
+    transform: translateY(50px);
+    animation: hide_indicator .7s linear;
 }
 .group1{
     position: relative;
