--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ header{
     top: 23px;
     right: 16px;
     width: 100px;
-    transition: all .5 ease;
+    transition: all .5s ease;
     display: none;
 }
 .menu_mini_icon{
