--- a/css/main.css
+++ b/css/main.css
@@ -774,6 +774,7 @@ footer:after{
     width: 100%;
     height: 85px;
     background-color: #0b3c34;
+    z-index: -1;
 }
 .footer_wrap{
     position: relative;
@@ -895,4 +896,16 @@ footer:after{
 .social li.show{
     opacity: 1;
     transform: translateY(0);
+}
+.css_vaildator{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 20px;
+}
+.css_vaildator p:nth-child(1){
+    margin-right: 5px;
 }
